[package]
name = "pulldown-cmark-babelmark"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2021"

[dependencies]
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
rocket = { version = "=0.5.0-rc.2", features = ["json"] }

[build-dependencies]
cargo-lock = "8.0.2"
itertools = "0.10.5"

[dev-dependencies]
serde_json = "1.0.88"
