[package]
name = "pulldown-cmark-babelmark"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2021"

[dependencies]
pulldown-cmark = { version = "0.9.3", default-features = false, features = ["simd"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }

[build-dependencies]
cargo-lock = "9.0.0"
itertools = "0.11.0"

[dev-dependencies]
serde_json = "1.0.97"
